# time-parsers

./: .travis.meta.yml  .travis.yml  CHANGELOG.md  README.md  package.yaml  stack-ghc-8.0.yaml  stack.yaml  time-parsers.cabal
.github/workflows/: haskell-ci.yml
src/Data/Time/: Parsers.hs  TH.hs
test/: Tests.hs
