cabal-version:      >=1.10
name:               time-parsers
version:            0.3
synopsis:           Parsers for types in time.
category:           Parsing
description:
  Parsers for types in @time@ using @parsers@ library.
  .
  Originally forked from aeson parsers.
  .
  See also <http://hackage.haskell.org/package/attoparsec-iso8601 attoparsec-iso-8601> package.

homepage:           https://github.com/phadej/time-parsers#readme
bug-reports:        https://github.com/phadej/time-parsers/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD3
license-file:       LICENSE
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.5
   || ==9.6.2

build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/phadej/time-parsers

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      base                >=4.9      && <4.19
    , integer-conversion  >=0.1      && <0.2
    , parsers             >=0.12.2.1 && <0.13
    , template-haskell    >=2.11.1.0 && <2.21
    , time                >=1.6.0.1  && <1.13

  exposed-modules:
    Data.Time.Parsers
    Data.Time.TH

  default-language: Haskell2010

test-suite time-parsers-tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test
  ghc-options:      -Wall
  build-depends:
      attoparsec        >=0.12.1.6 && <0.15
    , base
    , bifunctors        >=4.2.1    && <5.7
    , parsec            >=3.1.9    && <3.2
    , parsers           >=0.12.3   && <0.13
    , tasty             >=0.10.1.2 && <1.5
    , tasty-hunit       >=0.9.2    && <0.11
    , template-haskell
    , text
    , time
    , time-parsers

  default-language: Haskell2010
